--- a/package.json
+++ b/package.json
@@ -9,18 +9,18 @@
     },
     "license": "MIT",
     "dependencies": {
-        "@fullcalendar/core": "4.0.2",
+        "@fullcalendar/core": "^4.4.2",
         "@fullcalendar/daygrid": "4.0.1",
         "@fullcalendar/interaction": "4.0.2",
         "@fullcalendar/timegrid": "4.0.1",
-        "axios": "^0.19.0",
-        "prismjs": "^1.15.0",
-        "chart.js": "2.7.3",
+        "axios": "^0.21.1",
+        "chart.js": "^3.5.0",
         "classnames": "^2.2.6",
         "node-sass": "^4.12.0",
-        "primeflex": "2.0.0",
-        "primeicons": "4.1.0",
-        "primereact": "6.1.0",
+        "primeflex": "^3.0.1",
+        "primeicons": "^4.1.0",
+        "primereact": "^6.5.0",
+        "prismjs": "^1.15.0",
         "react": "^17.0.1",
         "react-app-polyfill": "^2.0.0",
         "react-dom": "^17.0.1",
@@ -28,12 +28,16 @@
         "react-scripts": "4.0.0",
         "react-transition-group": "^4.4.1"
     },
+    "main": "public/electron.js",
     "scripts": {
         "start": "react-scripts start",
         "build": "react-scripts build",
         "test": "react-scripts test",
-        "eject": "react-scripts eject"
+        "eject": "react-scripts eject",
+        "dev": "concurrently -k \"BROWSER=none npm start\" \"npm:electron\"",
+        "electron": "wait-on tcp:3000 && electron ."
     },
+    "proxy": "http://localhost:8000",
     "eslintConfig": {
         "extends": "react-app"
     },
@@ -42,5 +46,11 @@
         "not dead",
         "not ie <= 11",
         "not op_mini all"
-    ]
+    ],
+    "devDependencies": {
+        "concurrently": "^6.2.0",
+        "electron": "^13.1.7",
+        "electron-is-dev": "^2.0.0",
+        "wait-on": "^6.0.0"
+    }
 }
