--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "react": "^17.0.1",
         "react-app-polyfill": "^2.0.0",
         "react-dom": "^17.0.1",
+        "react-global-configuration": "^1.4.1",
         "react-router-dom": "^5.2.0",
         "react-scripts": "4.0.0",
         "react-transition-group": "^4.4.1"
@@ -37,7 +38,6 @@
         "dev": "concurrently -k \"BROWSER=none npm start\" \"npm:electron\"",
         "electron": "wait-on tcp:3000 && electron ."
     },
-    "proxy": "http://localhost:8000",
     "eslintConfig": {
         "extends": "react-app"
     },
