--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "license": "MIT",
     "dependencies": {
         "@babel/core": "^7.14.8",
+        "@babel/eslint-parser": "^7.14.9",
         "@fullcalendar/core": "^4.4.2",
         "@fullcalendar/daygrid": "4.0.1",
         "@fullcalendar/interaction": "4.0.2",
@@ -18,7 +19,6 @@
         "axios": "^0.21.1",
         "chart.js": "^3.5.0",
         "classnames": "^2.2.6",
-        "node-sass": "^6.0.1",
         "primeflex": "^3.0.1",
         "primeicons": "^4.1.0",
         "primereact": "^6.5.0",
@@ -31,6 +31,7 @@
         "react-script": "^2.0.5",
         "react-scripts": "^4.0.3",
         "react-transition-group": "^4.4.1",
+        "sass": "^1.37.2",
         "typescript": "^2.9.2"
     },
     "main": "public/electron.js",
